[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
authors = [
  {name = "InfinitiBit Team", email = "contact@infinitibit.ai"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed"
]
dependencies = [
  "aiofiles>=23.0.0",
  "aiohttp>=3.12.15",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "typer>=0.9.0",
  "huggingface_hub>=0.33.4",
  "numpy>=1.24.0"
]
description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
keywords = ["ai", "agents", "workflow", "automation", "rust", "python", "llm", "orchestration"]
license = {file = "LICENSE.md"}
maintainers = [
  {name = "InfinitiBit Team", email = "contact@infinitibit.ai"}
]
name = "graphbit"
readme = "README.md"
requires-python = ">=3.9,<3.14"
version = "0.6.8"

[project.urls]
"Bug Tracker" = "https://github.com/InfinitiBit/graphbit/issues"
Changelog = "https://github.com/InfinitiBit/graphbit/blob/main/CHANGELOG.md"
Discord = "https://discord.com/invite/huVJwkyu"
Documentation = "https://docs.graphbit.ai"
Homepage = "https://github.com/InfinitiBit/graphbit"
Repository = "https://github.com/InfinitiBit/graphbit"

[tool.bandit]
exclude_dirs = ["tests", "test"]
skips = ["B101", "B601"]

# Tool configurations
[tool.black]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | target
)/
'''
include = '\.pyi?$'
line-length = 200
target-version = ['py310']

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]

[tool.coverage.run]
omit = [
  "*/tests/*",
  "*/test_*",
  "*/__pycache__/*",
  "*/site-packages/*"
]
source = ["graphbit"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["graphbit"]
line_length = 200
multi_line_output = 3
profile = "black"
skip_gitignore = true
use_parentheses = true

[tool.maturin]
# PyO3 bindings configuration
bindings = "pyo3"
# Compatibility settings for PyPI distribution
compatibility = "linux"
# Manifest path for the Rust project
manifest-path = "python/Cargo.toml"
# Module configuration
module-name = "graphbit"
# Build profile for optimized releases
profile = "release"
# Python interpreter finding
python-source = "python/python-src"
# Enable auditwheel for proper PyPI compatibility
skip-auditwheel = false

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = ["InfinitiBit Team"]
description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
homepage = "https://github.com/InfinitiBit/graphbit"
name = "graphbit"
package-mode = false
readme = "README.md"
repository = "https://github.com/InfinitiBit/graphbit"
version = "0.6.8"

[tool.poetry.dependencies]
# Core dependencies - minimal for framework functionality
aiofiles = ">=23.0.0"
aiohttp = "^3.12.15"
huggingface_hub = ">=0.33.4"
numpy = [
  {version = "1.24.0", python = ">=3.9,<3.11"},  # For Python 3.9 and 3.10
  {version = "2.4.0", python = ">=3.11,<3.14"}  # For Python 3.11 to 3.13
]
python = ">=3.9,<3.14"
python-dotenv = ">=1.0.0"
rich = ">=13.0.0"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.0"
# Code quality tools
black = "^24.3.0"
detect-secrets = "^1.4.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.0.0"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-simplify = "^0.20.0"
isort = "^5.12.0"
maturin = "^1.8.6"
mypy = "^1.0.0"
pre-commit = "^3.6.0"
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
requests = ">=2.25.0"
safety = "^2.3.0"
types-pyyaml = "^6.0.12.20250822"

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --strict-config"
minversion = "7.0"
python_files = [
  "test_*.py",
  "tests_*.py",
  "*_test.py"
]
testpaths = [
  "tests"
]
