[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
authors = [
  {name = "InfinitiBit Team", email = "contact@infinitibit.ai"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "aiofiles>=23.0.0",
  "aiohttp>=3.12.15",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "typer>=0.9.0",
  "huggingface_hub>=0.33.4",
  "numpy>=1.24.0"
]
description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
keywords = ["ai", "agents", "workflow", "automation", "rust", "python", "llm", "orchestration"]
license = {file = "LICENSE.md"}
maintainers = [
  {name = "InfinitiBit Team", email = "contact@infinitibit.ai"}
]
name = "graphbit"
readme = "README.md"
requires-python = ">=3.9,<3.14"
version = "0.6.8"

[project.urls]
"Bug Tracker" = "https://github.com/InfinitiBit/graphbit/issues"
Changelog = "https://github.com/InfinitiBit/graphbit/blob/main/CHANGELOG.md"
Discord = "https://discord.com/invite/huVJwkyu"
Documentation = "https://docs.graphbit.ai"
Homepage = "https://github.com/InfinitiBit/graphbit"
Repository = "https://github.com/InfinitiBit/graphbit"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "graphbit"
profile = "release"
python-source = "python-src"
skip-auditwheel = false

# # Post-build script - shows license notice after build
# [tool.maturin.scripts]
# post-build = "build_notice:show_build_license_notice"
